# relearn-v3

./: README.md
server/: .env.example  README.md  docker-compose.yml  pyproject.toml
server/api/: app.py
server/api/db/: __init__.py  main.py
server/api/db/models/: database.py  user.py
server/api/routers/: __init__.py
server/api/schemas/: database.py
ui/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json
ui/.husky/: pre-commit
ui/src/: App.css  App.tsx  main.tsx
ui/src/components/: CustomSidebar.tsx  DatabaseSelector.tsx  DatabaseViewer.tsx  EditorTopbar.tsx  LoadingPlaceholder.tsx  QueryEditorPanel.tsx  QueryEditorPanelContent.tsx  QueryResults.tsx  ResultsPanel.tsx  SQLTranslation.tsx  SavedQueriesPanel.tsx  TablesViewer.tsx
ui/src/components/common/: HorizontalSplitter.tsx  PrimaryButton.tsx  SecondaryButton.tsx  SheetTab.tsx  VerticalSplitter.tsx
ui/src/components/layout/: CustomSidebar.tsx  MainLayout.tsx  Topbar.tsx
ui/src/helpers/: supabase.ts
ui/src/hooks/: useResize.tsx
ui/src/pages/: QueryEditor.tsx
ui/src/routes/: AppRoutes.tsx
ui/src/theme/: index.ts
